Creacion de una clase propia, reutilizable para el boton

--- a/Portal-web-Movie/index.html
+++ b/Portal-web-Movie/index.html
@@ -23,7 +23,7 @@
                 Reproduce en streaming todas las peliculas y series en tu movil, tablet, ordenador y tv.
             </p>
             <div class="mt-10">
-                <a href="#" class="hover:text-white hover:bg-blue-800 active:bg-blue-900 dark:focus:ring-blue-400 dark:ring-offset-gray-900 focus:outline-none focus:ring focus:ring-offset-2 focus:ring-blue-900 focus:ring-opacity-50 bg-blue-700 px-5 py-3 rounded-lg shadow-lg font-semibold text-sm text-white inline-block w-full sm:w-auto md:px-10 md:py-4 md:text-lg">Empezar</a>
+                <a href="#" class="button">Empezar</a>
             </div>
         </div>
     </main>
